fix style alignament

--- a/assets/css/gutenberg-editor-style.css
+++ b/assets/css/gutenberg-editor-style.css
@@ -55,7 +55,7 @@
 
 #editor .editor-styles-wrapper ul, #editor .editor-styles-wrapper ol {
   padding-left: 20px;
-  margin: 20px 0;
+  margin: 20px auto;
 }
 
 #editor .editor-styles-wrapper ul li, #editor .editor-styles-wrapper ol li {
@@ -68,7 +68,7 @@
 
 #editor .editor-styles-wrapper blockquote.wp-block-quote {
   border: none;
-  margin: 40px 0;
+  margin: 40px auto;
   padding: 0;
 }
 
